--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,84 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+  justify-content: space-between;
+}
+
+.form {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.form-input {
+  margin-right: 20px;
+}
+
+.messages {
+  display: flex;
+  width: 100%;
+  height: 80vh;
+  overflow-y: scroll;
+  flex-direction: column;
+}
+
+.message {
+  width: auto;
+  display: flex;
+  margin: 10px 0;
+}
+
+.sent p {
+  padding: 10px;
+  background-color: rgb(0, 122, 204);
+  border-radius: 20px;
+  margin-right: 20px;
+}
+
+.message img {
+  border-radius: 50px;
+  height: 45px;
+  width: 45px;
+  margin-right: 20px;
+}
+
+.sent {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.recieved {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.recieved p {
+  padding: 10px;
+  background-color: rgb(231, 231, 231);
+  color: black;
+  border-radius: 20px;
+}
+
+.header {
+  padding: 10px 0;
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  background-color: rgb(230, 230, 230);
+}
+
+.sign-in {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
